# ChangeLog for media-gfx/inkscape
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.123 2009/09/13 14:14:25 maekke Exp $

*inkscape-0.47_pre2 (13 Sep 2009)

  13 Sep 2009; Markus Meier <maekke@gentoo.org> +inkscape-0.47_pre2.ebuild:
  version bump

  15 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  -inkscape-0.47_pre0.ebuild, inkscape-0.47_pre1.ebuild:
  Move boost from RDEPEND to DEPEND only, since only headers are used.

*inkscape-0.47_pre1 (04 Jul 2009)

  04 Jul 2009; Markus Meier <maekke@gentoo.org> inkscape-0.47_pre0.ebuild,
  +inkscape-0.47_pre1.ebuild:
  version bump, add a note to the 0.47 ebuilds that local configuration
  files are moved from ${HOME}/.inkscape to ${HOME}/.config/inkscape wrt bug
  #276155

  04 Jul 2009; Brent Baude <ranger@gentoo.org> inkscape-0.47_pre0.ebuild:
  Marking inkscape-0.47_pre0 ~ppc64 for bug 273966

  27 Jun 2009; Markus Meier <maekke@gentoo.org> inkscape-0.47_pre0.ebuild:
  specify libpng dep, add sci-libs/gsl dep wrt bug #274204

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> inkscape-0.47_pre0.ebuild:
  Marked ~hppa (bug #273966).

*inkscape-0.47_pre0 (13 Jun 2009)

  13 Jun 2009; Markus Meier <maekke@gentoo.org> +inkscape-0.47_pre0.ebuild,
  metadata.xml:
  version bump to 0.47_pre0

  01 Jun 2009; Markus Meier <maekke@gentoo.org> inkscape-0.46-r5.ebuild,
  +files/inkscape-0.46-glibc2.10.patch:
  fix building with glibc-2.10 by Alex 'wired' Alexander, bug #270720

  08 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  inkscape-0.46-r5.ebuild, +files/inkscape-0.46-gcc44_p2.patch:
  Fix runtime crash with gcc-4.4, bug 268992. Thanks to Daniel J.
  <sleeperseven@hotmail.com> for the patch.

  20 Apr 2009; Markus Meier <maekke@gentoo.org>
  +files/inkscape-0.46-gcc44.patch, inkscape-0.46-r5:
  fix building with gcc-4.4 by Daniel J. in bug #265041

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  inkscape-0.46-r5.ebuild: