@@ -10,8 +10,10 @@ AUX inkscape-0.46-solaris.patch 2105 RMD160 1c72d24f7cc435d76f1321e26af95f1d4892
 DIST inkscape-0.46.tar.gz 18615326 RMD160 449e07fa4caa71f20025774353d19cad674631ac SHA1 b7c53c6d2bc0de4ff24d4a6bee86359ff11bef27 SHA256 91861e0d72228116d31e07192f77fe9e0968d4ed06499829b2d66e641496993a
 DIST inkscape-0.47pre1.tar.gz 22924828 RMD160 4f5c3f89643f196245620ce14f76802039574a4f SHA1 9a0026012afa8e562e545d980938d1012cd3bac0 SHA256 19eecc583deb4cbf4438a90b8f5b990f580916b05f99a348c0421cb5d048e77d
 DIST inkscape-0.47pre2.tar.gz 26464384 RMD160 b544fb77937c48c94dd20674cb91a473472e7ecc SHA1 d6bc84142d2d8276f3d1809272eeeff2be5b362a SHA256 f597eba2f20ebe5fff42fafcf774b0b607e336b4b4836a6a7af896c7784f260c
+DIST inkscape-0.47pre3.tar.gz 26821064 RMD160 86fae958f909ae75918f4d547a1080ab09fa3c39 SHA1 6111f18301b50062c51292c8c9c2ec2896feb071 SHA256 b59367192a9f8fc15938f623585436f3cf43388e3319615991cbfeb5c3ad951b
 EBUILD inkscape-0.46-r5.ebuild 2488 RMD160 79ce494fcf7e34e5c73de5f36201699658cc66a2 SHA1 ea68c1776647f73cd4e19fd6a2a20441748a77d8 SHA256 64504881e11a6ad556b2000bbe5db72cf4b754e83f1489d242850c359dba6c32
 EBUILD inkscape-0.47_pre1.ebuild 2424 RMD160 b00efe96ce948c1bec01be990fa9fbd7ff73d66b SHA1 4b9cf52ad228ca5ddbe3b32c5ae46b975cb21d6f SHA256 cc36d470e4bea104a90076130ba7a29b32115bc1f4b4edb50fa2c17691f88450
 EBUILD inkscape-0.47_pre2.ebuild 2421 RMD160 136bd5636708c83bf4663badd9f7a99f7e76dbb9 SHA1 794ad7b93083a54e2038997597238b4607f9111d SHA256 75778bc069555ff7281f6daef36eb4901615cb93b761a9201c16bff153ea7da3
-MISC ChangeLog 16671 RMD160 947ffcfd9295dfdf60ba6e42f9c4480c80f166a6 SHA1 f91fe8e5c101200b902940838159b5023656428a SHA256 e59f310fafe2107a0306d4f47b5e7b2756dfd0366a60a385b44ce01647cf2909
+EBUILD inkscape-0.47_pre3.ebuild 2364 RMD160 52ee24e9b3c6fcd09b82beb4225055d673eb497c SHA1 2071af554701bc9eb7c7781728dbfc54e5c7870f SHA256 1495d0f08a70e22ebae71925eb4189fcd4b21ea14cf2e8bdc9eee663026954dd
+MISC ChangeLog 16798 RMD160 7522fae158febc3581d61599c1e06159147b711b SHA1 62172f32420c560b419c3e667505f5d7e680b44b SHA256 c4ad19b6cb7f83fd7958c387cbbe719220179c6921dd0176c9f975c1d238a302
 MISC metadata.xml 587 RMD160 9ae7571b540c5a299c5ef6839dd4306f9e5cecd6 SHA1 9e552ba112046bb8d92953ea5ace3a8355560a58 SHA256 624c3c42ea924d7f4f90c11be900d1e54be5c63cb595ae60d60f2f9f5d6e3921
